[package]
name = "maps"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
image = "0.25.1"
imageproc = "0.25.0"
ordered-float = "4.2.1"
osmpbfreader = "0.16.1"
pathfinding = "4.10.0"
plotters = "0.3.6"
rand = "0.8.5"
resvg = "0.42.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
usvg = "0.42.0"


