[package]
name = "maps"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
image = "0.25.1"
imageproc = "0.25.0"
memmap2 = "0.9.4"
osmpbfreader = "0.16.1"
pathfinding = "4.10.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
threadpool = "1.8.1"

[profile.release]
debug = true

